allow solution to run with both, Java8 and Java11 with same target platform
Change-Id: I4f7772aaa1d9d1b65a2452ad98d8c51809fef2b4